force-app/main/default/objects/SBQQ__Quote__c/fields/Approver_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Approver_External_ID__c</fullName>
    <formula>TEXT(Brand_Order_Type__c)&amp;&quot;|&quot;&amp;TEXT(Rep_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver External ID</label>
    <type>Text</type>
</CustomField>