force-app/main/default/objects/SBQQ__Quote__c/fields/Backorder_Option__c.field-meta.xml
<CustomField>
    <fullName>Backorder_Option__c</fullName>
    <label>Backorder Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO PARTIAL DELIVERIES ALLOWED</fullName>
                <label>No Partial Deliveries Allowed</label>
            </value>
            <value>
                <fullName>INCOMPLETE LINES NOT ALLOWED</fullName>
                <label>Incomplete Lines Not Allowed</label>
            </value>
            <value>
                <fullName>INCOMPLETE PACKAGES NOT ALLOWED</fullName>
                <label>Incomplete Packages Not Allowed</label>
            </value>
            <value>
                <fullName>ALLOW INCOMPLETE LINES AND PACKAGES</fullName>
                <label>Allow Incomplete Lines and Packages</label>
            </value>
            <value>
                <fullName>TBA</fullName>
                <isActive>false</isActive>
                <label>TBA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>