force-app/main/default/objects/SBQQ__Quote__c/fields/Base_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Commission_Amount__c</fullName>
    <label>Base Commission Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.Commission_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>