force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Id__c</fullName>
    <label>Billing Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>