force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Website__c.field-meta.xml
<CustomField>
    <fullName>Billing_Website__c</fullName>
    <formula>Billing_Account__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Website</label>
    <type>Text</type>
</CustomField>