force-app/main/default/objects/SBQQ__Quote__c/fields/Bookings_Assignment_2__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Assignment_2__c</fullName>
    <label>Bookings Assignment 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>