force-app/main/default/objects/SBQQ__Quote__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Brand__c)</formula>
    <inlineHelpText>Brand of product to be configured;  To change this value, edit on the parent opportunity</inlineHelpText>
    <label>Brand</label>
    <type>Text</type>
</CustomField>