force-app/main/default/objects/SBQQ__Quote__c/fields/Brand_Backend__c.field-meta.xml
<CustomField>
    <fullName>Brand_Backend__c</fullName>
    <formula>IF(TEXT(SBQQ__Opportunity2__r.Brand__c) = &quot;Groth&quot;, &quot;Groth Blanket Gas Regulator&quot;,
IF(TEXT(SBQQ__Opportunity2__r.Brand__c) = &quot;LaMOT&quot;, &quot;LaMOT Blanket Gas Regulator&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Backend</label>
    <type>Text</type>
</CustomField>