force-app/main/default/objects/SBQQ__Quote__c/fields/Brand_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Brand_Order_Type__c</fullName>
    <label>Brand*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>