force-app/main/default/objects/SBQQ__Quote__c/fields/CalculatingField__c.field-meta.xml
<CustomField>
    <fullName>CalculatingField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculating Field</label>
    <type>Checkbox</type>
</CustomField>