force-app/main/default/objects/SBQQ__Quote__c/fields/Change_Order_Comments__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Comments__c</fullName>
    <label>Change Order Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>