force-app/main/default/objects/SBQQ__Quote__c/fields/Change_Order_Log__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Log__c</fullName>
    <label>Change Order Log</label>
    <type>TextArea</type>
</CustomField>