force-app/main/default/objects/SBQQ__Quote__c/fields/Change_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Status__c</fullName>
    <label>Change Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Unblock</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Change Order Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>