force-app/main/default/objects/SBQQ__Quote__c/fields/CO_Clause__c.field-meta.xml
<CustomField>
    <fullName>CO_Clause__c</fullName>
    <inlineHelpText>255 Char Limit. Please define what has changed via Change Order</inlineHelpText>
    <label>Change Order Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>