force-app/main/default/objects/SBQQ__Quote__c/fields/Commission_Calculation_Base__c.field-meta.xml
<CustomField>
    <fullName>Commission_Calculation_Base__c</fullName>
    <label>Commission Calculation Base</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>