force-app/main/default/objects/SBQQ__Quote__c/fields/Commission_Split_Sold_By_Rep__c.field-meta.xml
<CustomField>
    <fullName>Commission_Split_Sold_By_Rep__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Commission Split (Sold By Rep)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>