force-app/main/default/objects/SBQQ__Quote__c/fields/Company_B__c.field-meta.xml
<CustomField>
    <fullName>Company_B__c</fullName>
    <label>Company B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>