force-app/main/default/objects/SBQQ__Quote__c/fields/Conga_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Conga_Project_Number__c</fullName>
    <formula>SBQQ__Opportunity2__r.Project_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Project Number</label>
    <type>Text</type>
</CustomField>