force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Date__c</fullName>
    <label>Contract Review Date</label>
    <type>Date</type>
</CustomField>