force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>