force-app/main/default/objects/SBQQ__Quote__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <description>identify how the error was corrected</description>
    <label>Corrective Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales Corrected</fullName>
            </value>
            <value>
                <fullName>Sent Back to Partner to Fix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>