force-app/main/default/objects/SBQQ__Quote__c/fields/Created_By_Output__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Output__c</fullName>
    <formula>CreatedBy.FirstName + &quot;&quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Output</label>
    <type>Text</type>
</CustomField>