force-app/main/default/objects/SBQQ__Quote__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>This is the Created Date field but date is not in Date/Time.. it&apos;s only to show the Date. To be used with Expires On* field to set date to a specific date</description>
    <formula>CreatedDate</formula>
    <label>Created Date*</label>
    <type>Date</type>
</CustomField>