force-app/main/default/objects/SBQQ__Quote__c/fields/Custom_T_C_Attached__c.field-meta.xml
<CustomField>
    <fullName>Custom_T_C_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom T &amp; C&apos;s Attached</label>
    <type>Checkbox</type>
</CustomField>