force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Customer Contact)</relationshipLabel>
    <relationshipName>Quotes9</relationshipName>
    <type>Lookup</type>
</CustomField>