force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requirements__c</fullName>
    <label>Customer Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>