force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Shipment_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipment_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Approval Req. Before Shipment?</label>
    <type>Checkbox</type>
</CustomField>