force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Stat_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stat_Group__c</fullName>
    <label>Customer Stat Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>