force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_District__c.field-meta.xml
<CustomField>
    <fullName>Delivery_District__c</fullName>
    <label>Delivery District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Districts</valueSetName>
    </valueSet>
</CustomField>