force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Market__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Market__c</fullName>
    <label>Delivery Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>