force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Region__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Region__c</fullName>
    <label>Delivery Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>