force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <description>Delivery Terms for order.  Requirement for Customer Order in IFS</description>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIP</fullName>
                <label>Carriage and Insurance Paid To</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <label>Carriage Paid To</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <label>Cost, Insurance and Freight</label>
            </value>
            <value>
                <fullName>CFR</fullName>
                <label>Cost and Freight on Seller</label>
            </value>
            <value>
                <fullName>DDU</fullName>
                <label>Deliver Duty Paid(Taxes+Buyer)</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <label>Deliver Duty Paid (Taxes+Seller)</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <label>Delivered at Place</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <label>Ex Works</label>
            </value>
            <value>
                <fullName>FAS</fullName>
                <label>Free Alongside Ship</label>
            </value>
            <value>
                <fullName>FCA</fullName>
                <label>Free Carrier</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <label>Free on Board</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>