force-app/main/default/objects/SBQQ__Quote__c/fields/Denied_Party_Screening_Date__c.field-meta.xml
<CustomField>
    <fullName>Denied_Party_Screening_Date__c</fullName>
    <label>Denied Party Screening Date</label>
    <type>Date</type>
</CustomField>