force-app/main/default/objects/SBQQ__Quote__c/fields/Destination_Rep_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Destination_Rep_Commission_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Destination Rep Commission Percent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>