force-app/main/default/objects/SBQQ__Quote__c/fields/Destination_Rep_Commission_Split__c.field-meta.xml
<CustomField>
    <fullName>Destination_Rep_Commission_Split__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Amount (Dest Rep)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>