force-app/main/default/objects/SBQQ__Quote__c/fields/Display_Body_Standard_Message__c.field-meta.xml
<CustomField>
    <fullName>Display_Body_Standard_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Body Standard Message</label>
    <type>Checkbox</type>
</CustomField>