force-app/main/default/objects/SBQQ__Quote__c/fields/DisplayCDCLogo__c.field-meta.xml
<CustomField>
    <fullName>DisplayCDCLogo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display CDC Logo</label>
    <type>Checkbox</type>
</CustomField>