force-app/main/default/objects/SBQQ__Quote__c/fields/DisplayGrothContinentalLogo__c.field-meta.xml
<CustomField>
    <fullName>DisplayGrothContinentalLogo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Groth Continental Logo</label>
    <type>Checkbox</type>
</CustomField>