force-app/main/default/objects/SBQQ__Quote__c/fields/DisplayGrothLogo__c.field-meta.xml
<CustomField>
    <fullName>DisplayGrothLogo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Groth Logo</label>
    <type>Checkbox</type>
</CustomField>