force-app/main/default/objects/SBQQ__Quote__c/fields/DisplayLaMotLogo__c.field-meta.xml
<CustomField>
    <fullName>DisplayLaMotLogo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display LaMot Logo</label>
    <type>Checkbox</type>
</CustomField>