force-app/main/default/objects/SBQQ__Quote__c/fields/DisplayLVALogo__c.field-meta.xml
<CustomField>
    <fullName>DisplayLVALogo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display LVA Logo</label>
    <type>Checkbox</type>
</CustomField>