force-app/main/default/objects/SBQQ__Quote__c/fields/Do_Not_Ship_Before__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Ship_Before__c</fullName>
    <label>Do Not Ship Before</label>
    <type>Date</type>
</CustomField>