force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Class__c.field-meta.xml
<CustomField>
    <fullName>Document_Class__c</fullName>
    <label>Document Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SALES-100</fullName>
                <label>SALES-100 (Customer Quotes)</label>
            </value>
            <value>
                <fullName>SALES-110</fullName>
                <label>SALES-110 (Denied Party Screening Results)</label>
            </value>
            <value>
                <fullName>SALES-120</fullName>
                <label>SALES-120 (Customer Purchase Orders)</label>
            </value>
            <value>
                <fullName>SALES-130</fullName>
                <label>SALES-130 (Liberty (Discs) Contract Review Checklist)</label>
            </value>
            <value>
                <fullName>SALES-140</fullName>
                <label>SALES-140 (Stafford (Valves) Contract Review Checklist)</label>
            </value>
            <value>
                <fullName>SALES-150</fullName>
                <label>SALES-150 (Customer Specifications)</label>
            </value>
            <value>
                <fullName>SALES-160</fullName>
                <label>SALES-160 (Customer Procedures)</label>
            </value>
            <value>
                <fullName>SALES-200</fullName>
                <label>SALES-200 (Customer Order Requirements from Salesforce)</label>
            </value>
            <value>
                <fullName>SALES-210</fullName>
                <label>SALES-210 (Terms &amp; Conditions)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>