force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Class_Description__c</fullName>
    <label>Document Class Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Document_Class__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Quotes</fullName>
            </value>
            <value>
                <fullName>Denied Party Screening Results</fullName>
            </value>
            <value>
                <fullName>Customer Purchase Orders</fullName>
            </value>
            <value>
                <fullName>Liberty (Discs) Contract Review Checklist</fullName>
            </value>
            <value>
                <fullName>Stafford (Valves) Contract Review Checklist</fullName>
            </value>
            <value>
                <fullName>Customer Specifications</fullName>
            </value>
            <value>
                <fullName>Customer Procedures</fullName>
            </value>
            <value>
                <fullName>Customer Order Requirements from SalesForce</fullName>
            </value>
            <value>
                <fullName>Terms and Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>