force-app/main/default/objects/SBQQ__Quote__c/fields/End_Use_Application__c.field-meta.xml
<CustomField>
    <fullName>End_Use_Application__c</fullName>
    <formula>SBQQ__Opportunity2__r.End_Use_Application__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Use Application</label>
    <type>Text</type>
</CustomField>