force-app/main/default/objects/SBQQ__Quote__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (End User)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>