force-app/main/default/objects/SBQQ__Quote__c/fields/End_User_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>End_User_PostalCode__c</fullName>
    <label>End User Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>