force-app/main/default/objects/SBQQ__Quote__c/fields/Eng_Rep_1_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Eng_Rep_1_Commission_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Engineering Rep 1 Commission Percent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>