force-app/main/default/objects/SBQQ__Quote__c/fields/Eng_Rep_2_Commission_Split__c.field-meta.xml
<CustomField>
    <fullName>Eng_Rep_2_Commission_Split__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Amount (Eng Rep 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>