force-app/main/default/objects/SBQQ__Quote__c/fields/Eng_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Eng_Review_Status__c</fullName>
    <defaultValue>&apos;Not Started&apos;</defaultValue>
    <label>Eng Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>On Hold - Sales</fullName>
            </value>
            <value>
                <fullName>On Hold - Config Issue</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>