force-app/main/default/objects/SBQQ__Quote__c/fields/Engineering_Approver__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesI0xJ</relationshipName>
    <type>Lookup</type>
</CustomField>