force-app/main/default/objects/SBQQ__Quote__c/fields/Engineering_Quote_Header_Comments__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Quote_Header_Comments__c</fullName>
    <description>Field for only Engineers to see and use</description>
    <label>Engineering Quote Header Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>