force-app/main/default/objects/SBQQ__Quote__c/fields/Engineering_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Eng_Rep_2</relationshipName>
    <type>Lookup</type>
</CustomField>