force-app/main/default/objects/SBQQ__Quote__c/fields/Engineering_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Review_Date__c</fullName>
    <label>Engineering Review Date</label>
    <type>DateTime</type>
</CustomField>