force-app/main/default/objects/SBQQ__Quote__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <description>For conditional logic to set Quotes with specific Brands to have a specified expiration date, and the others to default to the CPQ setup validity date.</description>
    <formula>IF(OR(ISPICKVAL(Brand_Order_Type__c, &apos;CDC&apos;), ISPICKVAL(Brand_Order_Type__c,&apos;LaMOT&apos;)), DATE(2021,09,24),
IF(OR(ISPICKVAL(Brand_Order_Type__c , &apos;Groth&apos;), ISPICKVAL(Brand_Order_Type__c , &apos;LVA&apos;)), Created_Date__c + 30,null))</formula>
    <label>Expires On*</label>
    <type>Date</type>
</CustomField>