force-app/main/default/objects/SBQQ__Quote__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <formula>Order_Number__c +  Status_Code__c + IF(Revision__c &gt; 0, TEXT( Revision__c ),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>